# aragorn

./: CMakeLists.txt  todo.txt
include/aragorn/: app.hpp  engine.hpp
include/aragorn/core/: context.hpp  context_init.hpp
include/aragorn/util/: cmd_family_finder.hpp  gpu_picker.hpp  logger.hpp
src/: app.cpp  engine.cpp  main.cpp
src/util/: cmd_family_finder.cpp  gpu_picker.cpp  logger.cpp
